  polling for process termination in a separate thread.

wxMGL:

- Fixed NUM_LOCK having no effect.
- Fixed wxFileExists (affecting wxImage::LoadFile).
- Implement wxGetMouseState()

wxMotif:
- Implement wxGetMouseState()

wxX11:
- Implement wxGetMouseState()

wxMSW:
- Drag and drop now works inside wxStaticBox.
- Implemented wxComboBox::SetEditable()


2.6.3
-----

All:

- Fixed crash when loading message catalogs in Unicode build.
- Fixed crash in wxList code when building with wxUSE_STL=1 (Christoph Schulz)
- Spurious error message from wxLaunchDefaultBrowser fixed.
- Compilation fixes for (more strict) g++ 4.1
- Speed improvements to wxRegEx when matching is done in a loop such as
  during a search and replace.
- Fix regerror and regfree name conficts when built-in regex and system regex
  are both used in the same program.
- wxCondition::WaitTimeout() now returns correct value when timeout occurs.
- Bug in wxLogStream::DoLogString in Unicode builds fixed.
- Fixed Unicode builds using SunPro compiler by defining__WCHAR_TYPE__.
- wxFileName now also looks for TMPDIR on Unix.
- Fixed occasional wxThread cleanup crash.
- Fixed build error in list.h with VC++ 2005.
- wxImage::Copy() forgot the alpha channel.
- Fixed wxSocketBase::InterruptWait on wxBase.

All (GUI):

- Fixed abort() on loading invalid PNG image
- Added space after list item number in wxHTML.
- wxCalendarCtrl drawing, positioning and hit-testing fixes.
- More checking of image validity before loading into wxImage.
- Added double-buffering to wxVListBox and fixed a scrolling issue.
- More than one filter allowed in in wxDocTemplate filter.
- Fixed infinite loop in tab traversal code with wxUSE_STL==1

wxGTK:

- Fixed problem with choice editor in wxGrid whereby the editor
  lost focus when the combobox menu was shown.
- Fixed problem trying to print from a preview, whereby wrong printer
  class was used.
- Worked around pango crashes in strncmp on Solaris 10.